objects/AreaZipCode__c.object
<CustomObject>
    <description>A list of zip codes in each area.</description>
    <fields>
        <fullName>AreaZipCodeEID__c</fullName>
        <description>The Enterprise ID for this Area ZipCode.</description>
        <externalId>true</externalId>
        <inlineHelpText>The Enterprise ID for this Area ZipCode.</inlineHelpText>
        <label>Area ZipCode EID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Area__c</fullName>
        <description>The area containing this entire zip code.</description>
        <inlineHelpText>The area containing this entire zip code.</inlineHelpText>
        <label>Area</label>
        <referenceTo>Area__c</referenceTo>
        <relationshipLabel>Area Zip Codes</relationshipLabel>
        <relationshipName>AreaZipCodes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ZipCode__c</fullName>
        <description>A zip code that is in this area.</description>
        <inlineHelpText>A zip code that is in this area.</inlineHelpText>
        <label>Zip Code</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Area Zip Code</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Area Zip Code Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Area Zip Codes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>